tests/checker/fail/decl_arrow_pipe.can
Doubled = Int

Doubled = (Int) -> Doubled {
    Int -> Product(2)
}

Unit => Program {
    3 -> Doubled -> String -> Print
}
